--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "yew-wasm-pack-template"
-version = "0.2.0"
-authors = ["Yew Maintainers <maintainers@yew.rs"]
+name = "colorswitch"
+version = "0.0.1"
+authors = ["Andrew Straw <strawman@astraw.com>"]
 edition = "2018"
 
 [lib]
