--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ serde_derive = "1"
 wasm-bindgen = "0.2.58"
 wasm-logger = "0.2"
 wee_alloc = { version = "0.4.4", optional = true }
-yew = "0.17"
+#yew = "0.17"
+yew = {git="https://github.com/yewstack/yew", rev="07dcbb9982c1e6228c7b519514bfc98b18ab8cfb"}
+js-sys = "0.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
@@ -24,5 +26,7 @@ wasm-bindgen-test = "0.3"
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
-  'KeyboardEvent',
+  'Blob',
+  'HtmlImageElement',
+  'Url',
 ]
