--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ serde_derive = "1"
 wasm-bindgen = "0.2.58"
 wasm-logger = "0.2"
 wee_alloc = { version = "0.4.4", optional = true }
-#yew = "0.17"
+# yew = "0.17"
 yew = {git="https://github.com/yewstack/yew", rev="07dcbb9982c1e6228c7b519514bfc98b18ab8cfb"}
 js-sys = "0.3"
+palette = {version="0.5", default-features=false, features=["libm"]}
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
