--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ wee_alloc = { version = "0.4.4", optional = true }
 yew = "0.17"
 js-sys = "0.3"
 palette = {version="0.5", default-features=false, features=["libm"]}
+git-version = "0.3"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
