trigger check workflow on push
(The check workflow will also, as previously, run on a pull request).

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,6 @@
 name: Cargo Check
-on: [pull_request]
+# Trigger the workflow on push or pull request
+on: [push, pull_request]
 jobs:
   check:
     runs-on: ubuntu-latest
