--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "colorswitch"
+name = "colorimetry-net"
 version = "0.0.1"
 authors = ["Andrew Straw <strawman@astraw.com>"]
 edition = "2018"
