--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "colorimetry-net"
 version = "0.0.1"
 authors = ["Andrew Straw <strawman@astraw.com>"]
 edition = "2018"
+repository = "https://github.com/colorimetry/colorimetry-net"
+description = "digital image based colorimetry"
+license = "MIT/Apache-2.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
