--- a/site-base/_cobalt.yml
+++ b/site-base/_cobalt.yml
@@ -1,7 +1,7 @@
 
 site:
-  title: cobalt blog
+  title: colorimetry.net
   description: Blog Posts Go Here
-  base_url: http://example.com
+  base_url: https://colorimetry.net
 posts:
   rss: rss.xml
