--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "colorimetry-net"
+name = "hnb-app"
 version = "0.0.1"
 authors = ["Andrew Straw <strawman@astraw.com>"]
 edition = "2018"
