--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,10 @@
 [build]
 environment = { YARN_FLAGS = "--frozen-lockfile" }
+
+[[redirects]]
+from = "/"
+to = "/hnb-app/"
+
+[[redirects]]
+from = ""
+to = "/hnb-app/"
