--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -30,6 +30,8 @@ version = "0.3.4"
 features = [
   'Blob',
   'CanvasRenderingContext2d',
+  'DataTransfer',
+  'DragEvent',
   'HtmlCanvasElement',
   'HtmlImageElement',
   'ImageData',
