fix warnings in rust-analyzer
I'm not sure why this is necessary, but it stops errors in
rust-analyzer.

--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -28,6 +28,7 @@ features = [
   'CanvasRenderingContext2d',
   'DataTransfer',
   'DragEvent',
+  'File',
   'HtmlCanvasElement',
   'HtmlImageElement',
   'ImageData',
