implement download button
This also implements a new component to handle display of image.

Fixes #3.

--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -26,9 +26,11 @@ version = "0.3.4"
 features = [
   'Blob',
   'CanvasRenderingContext2d',
+  'CssStyleDeclaration',
   'DataTransfer',
   'DragEvent',
   'File',
+  'HtmlAnchorElement',
   'HtmlCanvasElement',
   'HtmlImageElement',
   'ImageData',
