--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -14,6 +14,8 @@ crate-type = ["cdylib", "rlib"]
 log = "0.4"
 wasm-bindgen = "0.2.78"
 wasm-logger = "0.2"
+gloo-file = "0.2"
+gloo-utils = "0.1"
 yew = "0.19"
 js-sys = "0.3"
 palette = {version="0.5", default-features=false, features=["libm"]}
@@ -33,6 +35,7 @@ features = [
   'HtmlAnchorElement',
   'HtmlCanvasElement',
   'HtmlImageElement',
+  'HtmlInputElement',
   'ImageData',
   'Url',
 ]
