--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+        dtolnay/rust-toolchain@master
         with:
           toolchain: stable
       - name: Run fmt
