--- a/hnb-app/Cargo.toml
+++ b/hnb-app/Cargo.toml
@@ -7,12 +7,10 @@ repository = "https://github.com/colorimetry/colorimetry-net"
 description = "digital image based colorimetry"
 license = "MIT/Apache-2.0"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
 [dependencies]
 gloo-file = "0.3"
 log = "0.4"
+console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2.82"
 wasm-logger = "0.2"
 yew = { version = "0.21", default-features = false, features = ["csr"] }
